@@ -19,24 +19,14 @@ local flat = [[Interface\AddOns\ElvUI_MerathilisUI\media\textures\Flat]]
 if E.db.mui.installed == nil then return; end
 
 local ChangeLog = CreateFrame("frame")
-local ChangeLogData = [=[|cffff7d0av2.20|r, 21.10.2016
+local ChangeLogData = [=[|cffff7d0av2.21|r, 25.10.2016
 
 |cffff7d0aChanges:|r
- |cffff7d0a•|r Massive Code cleanup.
- |cffff7d0a•|r Change the tag for BigName in Player-/TargetFrame.
- |cffff7d0a•|r Let the Bossmods handle the RaidWarnigFrame.
- |cffff7d0a•|r Delete GroupInfo.
- |cffff7d0a•|r Some Layout adjustments.
- |cffff7d0a•|r Added a Vignette-Alert (For Rars/Treasures).
- |cffff7d0a•|r Updated LocPanel and fix a error in Dropdown.
- |cffff7d0a•|r Change the ClassIcon texture for the TargetFrame.
- |cffff7d0a•|r Adopted latest oUF changes from ElvUI.
- |cffff7d0a•|r Add an own BigWigs Skin.
- |cffff7d0a•|r Delte the MasterPlan Skin.
- |cffff7d0a•|r Cleanup for BossEmotes.
+ |cffff7d0a•|r Add back GroupInfo Frame. It's now movable via mover if you are in a Raid/Group.
+ |cffff7d0a•|r Remove settings from ElvUI that are no longer exist.
 
 |cffff7d0aNotes:|r
- |cffff7d0a•|r Have fun! :)
+ |cffff7d0a•|r For Patch 7.1
 ]=];
 
 local frame = CreateFrame("Frame", "MerathilisUIChangeLog", E.UIParent)
