@@ -1,3 +1,8 @@
+<b><u> v2.21, 25.10.2016</b></u>
+<font color=#FF8C00>&#9830;</font> FOR PATCH 7.1
+<font color=#FF8C00>&#9830;</font> Add back GroupInfo Frame. It's now movable via mover if you are in a Raid/Group.
+<font color=#FF8C00>&#9830;</font> Remove settings from ElvUI that are no longer exist.
+
 <b><u> v2.20, 21.10.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Massive Code cleanup.
 <font color=#FF8C00>&#9830;</font> Change the tag for BigName in Player-/TargetFrame.
